"""Test Matter Event entities."""

from unittest.mock import MagicMock

from matter_server.client.models.node import MatterNode
from matter_server.common.models import EventType, MatterNodeEvent
import pytest
from syrupy.assertion import SnapshotAssertion

from homeassistant.components.event import ATTR_EVENT_TYPE, ATTR_EVENT_TYPES
from homeassistant.const import Platform
from homeassistant.core import HomeAssistant
from homeassistant.helpers import entity_registry as er

from .common import snapshot_matter_entities, trigger_subscription_callback


@pytest.mark.usefixtures("matter_devices")
async def test_events(
    hass: HomeAssistant,
    entity_registry: er.EntityRegistry,
    snapshot: SnapshotAssertion,
) -> None:
    """Test events."""
    snapshot_matter_entities(hass, entity_registry, snapshot, Platform.EVENT)


@pytest.mark.parametrize("node_fixture", ["generic_switch"])
async def test_generic_switch_node(
    hass: HomeAssistant,
    matter_client: MagicMock,
    matter_node: MatterNode,
) -> None:
    """Test event entity for a GenericSwitch node."""
    state = hass.states.get("event.mock_generic_switch_button")
    assert state
    assert state.state == "unknown"
    assert state.name == "Mock Generic Switch Button"
    # check event_types from featuremap 14 (0b1110)
    assert state.attributes[ATTR_EVENT_TYPES] == [
        "initial_press",
        "short_release",
        "long_press",
        "long_release",
    ]
    # trigger firing a new event from the device
    await trigger_subscription_callback(
        hass,
        matter_client,
        EventType.NODE_EVENT,
        MatterNodeEvent(
            node_id=matter_node.node_id,
            endpoint_id=1,
            cluster_id=59,
            event_id=1,
            event_number=0,
            priority=1,
            timestamp=0,
            timestamp_type=0,
            data=None,
        ),
    )
    state = hass.states.get("event.mock_generic_switch_button")
    assert state.attributes[ATTR_EVENT_TYPE] == "initial_press"


@pytest.mark.parametrize("node_fixture", ["generic_switch_multi"])
async def test_generic_switch_multi_node(
    hass: HomeAssistant,
    matter_client: MagicMock,
    matter_node: MatterNode,
) -> None:
    """Test event entity for a GenericSwitch node with multiple buttons."""
    state_button_1 = hass.states.get("event.mock_generic_switch_button_1")
    assert state_button_1
    assert state_button_1.state == "unknown"
    # name should be 'DeviceName Button (1)' due to the label set to just '1'
    assert state_button_1.name == "Mock Generic Switch Button (1)"
    # check event_types from featuremap 30 (0b11110) and MultiPressMax unset (default 2)
    assert state_button_1.attributes[ATTR_EVENT_TYPES] == [
        "multi_press_1",
        "multi_press_2",
        "long_press",
        "long_release",
    ]
    # check button 2
    state_button_2 = hass.states.get("event.mock_generic_switch_button_2")
    assert state_button_2
    assert state_button_2.state == "unknown"
    # name should be 'DeviceName Button (2)'
    assert state_button_2.name == "Mock Generic Switch Button (2)"
    # check event_types from featuremap 30 (0b11110) and MultiPressMax 4
    assert state_button_2.attributes[ATTR_EVENT_TYPES] == [
        "multi_press_1",
        "multi_press_2",
        "multi_press_3",
        "multi_press_4",
        "long_press",
        "long_release",
    ]

    # trigger firing a multi press event
    await trigger_subscription_callback(
        hass,
        matter_client,
        EventType.NODE_EVENT,
        MatterNodeEvent(
            node_id=matter_node.node_id,
            endpoint_id=1,
            cluster_id=59,
            event_id=6,
            event_number=0,
            priority=1,
            timestamp=0,
            timestamp_type=0,
            data={"totalNumberOfPressesCounted": 2},
        ),
    )
    state = hass.states.get("event.mock_generic_switch_button_1")
    assert state.attributes[ATTR_EVENT_TYPE] == "multi_press_2"


@pytest.mark.parametrize("node_fixture", ["door_lock"])
async def test_door_lock_event_entity(
    hass: HomeAssistant,
    matter_client: MagicMock,
    matter_node: MatterNode,
) -> None:
    """Test event entity for a DoorLock node."""
    state = hass.states.get("event.mock_door_lock_lock_event")
    assert state
    assert state.state == "unknown"
    assert set(state.attributes[ATTR_EVENT_TYPES]) == {
        "door_lock_alarm",
        "lock_operation",
        "lock_operation_error",
    }

    # Test LockOperation event (event_id=2)
    await trigger_subscription_callback(
        hass,
        matter_client,
        EventType.NODE_EVENT,
        MatterNodeEvent(
            node_id=matter_node.node_id,
            endpoint_id=1,
            cluster_id=257,
            event_id=2,
            event_number=0,
            priority=1,
            timestamp=0,
            timestamp_type=0,
            data={"operationSource": 7, "userIndex": 1},
        ),
    )
    state = hass.states.get("event.mock_door_lock_lock_event")
    assert state.attributes[ATTR_EVENT_TYPE] == "lock_operation"

    # Test LockOperationError event (event_id=3)
    await trigger_subscription_callback(
        hass,
        matter_client,
        EventType.NODE_EVENT,
        MatterNodeEvent(
            node_id=matter_node.node_id,
            endpoint_id=1,
            cluster_id=257,
            event_id=3,
            event_number=1,
            priority=1,
            timestamp=0,
            timestamp_type=0,
            data={"operationSource": 3, "operationError": 1},
        ),
    )
    state = hass.states.get("event.mock_door_lock_lock_event")
    assert state.attributes[ATTR_EVENT_TYPE] == "lock_operation_error"

    # Test DoorLockAlarm event (event_id=0)
    await trigger_subscription_callback(
        hass,
        matter_client,
        EventType.NODE_EVENT,
        MatterNodeEvent(
            node_id=matter_node.node_id,
            endpoint_id=1,
            cluster_id=257,
            event_id=0,
            event_number=2,
            priority=1,
            timestamp=0,
            timestamp_type=0,
            data={"alarmCode": 0},
        ),
    )
    state = hass.states.get("event.mock_door_lock_lock_event")
    assert state.attributes[ATTR_EVENT_TYPE] == "door_lock_alarm"
